Update header fixes from dark mode fix/update pr, hide input bar until kui is loaded (#69)
* fix header styling in dark mode

* try important flags

* try again

* test css

* fix X icon color and try hiding input bar when loading

* fix font-weight

--- a/client/styles/header-overrides.scss
+++ b/client/styles/header-overrides.scss
@@ -8,7 +8,19 @@
  *******************************************************************************/
 
 #header {
+
+  .bx--modal-header__heading, .bx--modal-content__text, .bx--snippet-container {
+    color: #171717 !important;
+  }
+
   #resource-modal {
+    .bx--modal-header {
+      .bx--modal-header__heading {
+        font-size: 1.75rem !important;
+        font-weight: 300 !important;
+      }
+    }
+
     .bx--modal-header, .bx--modal-footer {
       width: 100%
     }
@@ -19,6 +31,30 @@
     }
     .bx--modal-footer {
       background-color: inherit;
+
+      .bx--btn {
+        height: 32px !important;
+        width: 64px !important;
+      }
+
+      .bx--btn--secondary {
+        background-color: transparent !important;
+        border: 2px solid #3d70b2 !important;
+        color: #3d70b2 !important;
+        &:hover {
+          background-color: #3d70b2 !important;
+          color: #fff !important;
+        }
+      }
+
+      .bx--btn--primary {
+        background-color: #3d70b2 !important;
+        color: #fff !important;
+
+        &:hover {
+          background-color: #30588c !important;
+        }
+      }
     }
   }
 
@@ -46,6 +82,10 @@
   #configure-client-modal {
     .bx--modal-header {
       padding-left: 0;
+
+      .bx--modal-close__icon {
+        fill: #171717;
+      }
     }
     .bx--modal-content {
       width: 100%;
