--- a/client/styles/mcm-kui.scss
+++ b/client/styles/mcm-kui.scss
@@ -14,6 +14,12 @@
   height: calc(100% - 3.082rem) // resize to accomodate common header
 }
 
+.still-loading {
+  .kui--input-stripe {
+    visibility: hidden;
+  }
+}
+
 #confirm-dialog.bx--modal-container { // carbon v9/v10 conflict fixes
   border-top: none;
   padding: 0;
